[project]
name = "share"
version = "0.4.3"
description = "A simple file server"
readme = "README.md"
authors = [
    { name = "Jackie Han", email = "jackiehank@163.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "ruff>=0.12.12",
]
